# qrism

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  notes.md
benches/: benchmark.rs  decoding.rs  detection.rs  main.rs  utils.rs
benches/dataset/: blackbox_result.txt
benches/dataset/decoding/large/: version27.txt  version40.txt
benches/dataset/decoding/medium/: version21.txt
benches/dataset/decoding/multiple/: multiple.txt
benches/dataset/decoding/small/: version10.txt
examples/: basic_qr_generation.rs  full_config_qr_generation.rs  highcapacity_qr_generation.rs  read_highcapacity_qr.rs  read_qr.rs
proptest-regressions/common/codec/: mod.txt
src/: builder.rs  codec.rs  deqr.rs  ec.rs  ecc.rs  encode.rs  error.rs  error_correction.rs  iter.rs  lib.rs  main.rs  mask.rs  metadata.rs  qr.rs  reader.rs  render.rs  types.rs
src/builder/: ec.rs  mod.rs  qr.rs
src/common/: bit_utils.rs  bitstream.rs  codec.rs  ec.rs  error.rs  iter.rs  mask.rs  metadata.rs  mod.rs
src/common/codec/: decoder.rs  encoder.rs  mod.rs  types.rs
src/common/ec/: block.rs  decoder.rs  ec_bench.rs  encoder.rs  galois.rs  mod.rs  version_db.rs
src/common/utils/: benchmark.rs  bit_types.rs  cast.rs  error.rs  iter.rs  macros.rs  mod.rs
src/reader/: binarize.rs  deqr.rs  deqr_temp.rs  finder.rs  mod.rs  prepare.rs  symbol.rs
src/reader/utils/: accumulate.rs  geometry.rs  homography.rs  mod.rs
tests/: qr_tests.proptest-regressions  qr_tests.rs
tests/images/: result.txt  result1.txt  result_rqrr.txt
tests/images/qrcode-2/: 3 - Copy.txt
