[package]
name = "qrism"
version = "0.1.0"
edition = "2021"
description = "A Rust library for generating and reading QR codes with Reed-Solomon error correction. Supports traditional monochromatic QR codes with additional experimental multicolor QR support for enhanced storage capacity."
license = "MIT"
repository = "https://github.com/mohnishsalian0/qrism"
homepage = "https://github.com/mohnishsalian0/qrism"
keywords = [
	"qr-code",
	"barcode",
	"multiplex-qr",
	"reed-solomon",
	"error-correction",
]
categories = ["encoding", "multimedia::images", "computer-vision"]
authors = ["Mohnish Salian"]
readme = "README.md"

[dependencies]
encoding_rs = "0.8.35"
image = "0.25.2"
imageproc = "0.25.0"
num-traits = "0.2.19"
rand = "0.9.0"
rqrr = "0.9.3"
time = "0.3.41"

[dev-dependencies]
geo = "0.29.3"
geo-booleanop = "0.3.2"
proptest = "1.6.0"
rayon = "1.10.0"
test-case = "3.3.1"
walkdir = "2.5.0"

[[bench]]
name = "detection"
harness = false
required-features = ["benchmark"]

[[bench]]
name = "decoding"
harness = false
required-features = ["benchmark"]

[features]
benchmark = []
